complete FX section

--- a/conversion/choose-your-fx-solution.mdx
+++ b/conversion/choose-your-fx-solution.mdx
@@ -3,3 +3,70 @@ title: "Choose Your FX Solution"
 sidebarTitle: "Choose Your FX Solution"
 description: "Compare Rates and Quotes to find the right FX solution for your use case."
 ---
+
+Fincra provides two ways to access exchange rates for currency conversion — **Quotes** and **Rates**. They serve different purposes in your integration, and you can use both within the same account.
+
+## At a glance
+
+| | Quotes | Rates |
+|---|---|---|
+| **Purpose** | Lock in a guaranteed exchange rate before converting | Check the current exchange rate without commitment |
+| **Rate guarantee** | Yes — locked for 30 seconds | No — indicative only, can change at any time |
+| **Required for conversion** | Yes — every conversion needs a `quoteReference` | No — cannot be used to create a conversion directly |
+| **Best for** | Executing conversions, locking in pricing | Monitoring rates, displaying pricing to users, planning |
+| **Endpoint** | `POST /quotes/generate` | `GET /quotes/treasury-orders/rates` |
+
+## Quotes
+
+Quotes are the core of Fincra's Currency Conversion. When you generate a quote, Fincra locks in an exchange rate for **30 seconds**, giving you a guaranteed price to convert at. The response includes a `quoteReference` that you pass to the conversion endpoint to execute the trade.
+
+**When to use Quotes:**
+
+- You're ready to convert and want a guaranteed rate
+- Your workflow requires knowing the exact conversion amount before committing (e.g., payroll, tuition payments)
+- You need to show a confirmed price to your customer before executing (e.g., checkout flows, booking confirmations)
+
+Every conversion on Fincra requires a quote. There is no way to convert without one.
+
+<Card title="Quotes" icon="lock" href="/conversion/quotes">
+  Learn how to generate a quote and use the quoteReference to create a conversion.
+</Card>
+
+## Rates
+
+Rates give you a real-time view of exchange rates across your supported currency pairs. They're purely informational — you can't use a rate to create a conversion directly, but they're useful for building rate-aware features into your product.
+
+**When to use Rates:**
+
+- You want to display live exchange rates on your dashboard or app
+- You're monitoring rate movements to decide the best time to convert
+- You need to estimate conversion costs before committing
+
+<Card title="Rates" icon="chart-line" href="/conversion/rates">
+  Learn how to fetch live exchange rates for any supported currency pair.
+</Card>
+
+## Which use cases favour which?
+
+| Use case | Recommended | Why |
+|---|---|---|
+| [Travel & Hospitality](/conversion/travel-and-hospitality) | **Rates** to display, **Quotes** to book | Show indicative prices to travelers, then lock the rate at booking time |
+| [Payroll](/conversion/payroll) | **Quotes** | Salaries must be exact — lock the rate to guarantee the payout amount |
+| [Digital Marketplaces](/conversion/digital-marketplaces) | **Rates** to estimate, **Quotes** to settle | Estimate seller payouts with rates, lock with a quote at settlement |
+| [International Trade](/conversion/international-trade-settlement) | **Rates** to monitor, **Quotes** to execute | Monitor rates for a favorable window, then lock and convert |
+| [Education & Tuition](/conversion/education-and-tuition-payments) | **Quotes** | Tuition is a fixed amount — lock exactly how much local currency covers the fee |
+
+## Can I use both?
+
+Yes. Rates and Quotes are not mutually exclusive. A common pattern is to use the Rates endpoint to monitor exchange rates in the background, then call the Quotes endpoint to lock in a rate when conditions are favorable or when a user action triggers a conversion.
+
+## What's next
+
+<CardGroup cols={2}>
+  <Card title="Create a Conversion" icon="arrow-right-arrow-left" href="/conversion/create-a-conversion">
+    Follow the step-by-step guide to execute your first conversion.
+  </Card>
+  <Card title="Supported Currency Pairs" icon="arrows-rotate" href="/conversion/supported-currency-pairs">
+    Check which currency pairs are available for conversion.
+  </Card>
+</CardGroup>
