--- a/conversion/payroll.mdx
+++ b/conversion/payroll.mdx
@@ -3,3 +3,38 @@ title: "Payroll"
 sidebarTitle: "Payroll"
 description: "How businesses use currency conversion to pay teams across multiple countries."
 ---
+
+Businesses with employees or contractors across multiple countries need to pay salaries in each person's local currency. A company headquartered in Nigeria may hold funds in NGN but needs to pay team members in GHS, KES, and USD. The amounts must be exact — an employee expecting 500 USD cannot receive 498 USD because the rate shifted between approval and execution.
+
+Fincra's Currency Conversion lets businesses lock in exchange rates for each currency before executing payroll, guaranteeing that every employee receives the exact amount they're owed.
+
+## How it works
+
+<Note>
+  **Design team:** Flow diagram needed here — visual showing: Business holds NGN in wallet → Payroll date approaches → Generates quote for each currency (NGN→GHS, NGN→KES, NGN→USD) → Executes conversions at locked rates → Funds settle in destination wallets → Disburses via Payouts API.
+</Note>
+
+1. **Business holds funds in source currency** — The company has funds in their Fincra NGN wallet to cover the payroll run.
+2. **Payroll amounts finalized** — The business calculates how much each employee is owed in their local currency and determines the total amount needed per currency.
+3. **Quotes generated per currency** — The business calls the [Quotes API](/conversion/quotes) for each currency pair (e.g., NGN-GHS, NGN-KES, NGN-USD), locking in the exact exchange rate and conversion amount.
+4. **Conversions executed** — For each quote, the business passes the `quoteReference` to the [conversion endpoint](/conversion/create-a-conversion) to execute the conversion at the guaranteed rate.
+5. **Funds settle in destination wallets** — The converted amounts settle in the respective currency wallets within 5–10 minutes.
+6. **Payouts disbursed** — The business uses the [Payouts API](/payouts/overview) to send funds from each currency wallet to employees in their local currency.
+
+## Which FX solution to use
+
+| Stage | Solution | Why |
+|---|---|---|
+| All stages | [Quotes](/conversion/quotes) | Salaries are fixed amounts. Quotes guarantee the exact conversion amount so every employee receives what they're owed. |
+
+Rates are not recommended for payroll. Indicative rates can shift between the time you calculate payroll and the time you execute — Quotes eliminate that risk.
+
+## Why this matters
+
+- **Exact amounts** — Employees receive the precise salary amount in their local currency. No rounding surprises.
+- **Multi-currency in one run** — Convert to multiple currencies in a single payroll cycle by generating a quote for each.
+- **No conversion fees** — The exchange rate in the quote is the all-in rate. No hidden fees on top of the conversion.
+
+<Card title="Create a Conversion" icon="arrow-right-arrow-left" href="/conversion/create-a-conversion">
+  Follow the step-by-step guide to implement this flow.
+</Card>
