--- a/conversion/rates.mdx
+++ b/conversion/rates.mdx
@@ -1,5 +1,53 @@
 ---
 title: "Rates"
 sidebarTitle: "Rates"
-description: "Check live exchange rates between currency pairs without locking in a price."
+description: "Check live exchange rates between currency pairs without commitment."
 ---
+
+Rates give you a real-time view of Fincra's exchange rates without locking in a price or making any commitment. Use them to monitor the market, display pricing to your users, or estimate conversion costs before generating a quote.
+
+Rates are informational only — you cannot use a rate to create a conversion directly. To convert, you need to [generate a quote](/conversion/quotes).
+
+## How Rates work
+
+<Note>
+  **Design team:** Flow diagram needed here — simple visual showing: Request rate for currency pair → Receive buy and sell prices → Use information to decide when to convert.
+</Note>
+
+1. **Request a rate** — Call `GET /quotes/treasury-orders/rates` with either a `currencyPair` (e.g., `USD-NGN`) or a single `currency` (e.g., `USD`) to get rates for all pairs involving that currency.
+2. **Receive buy and sell prices** — Fincra returns the current buy and sell prices for the currency pair.
+
+Rates update in real-time and reflect current market conditions.
+
+## What's in a rate response
+
+| Field | Description |
+|---|---|
+| `baseCurrency` | The base currency of the pair (e.g., `USD`). |
+| `quoteCurrency` | The quote currency of the pair (e.g., `NGN`). |
+| `side` | Either `buy` or `sell`. |
+| `price` | The current exchange rate for that side. |
+
+The response returns both `buy` and `sell` rates for the requested pair.
+
+## Request parameters
+
+| Parameter | Type | Required | Description |
+|---|---|---|---|
+| `currencyPair` | query | Either this or `currency` | A specific currency pair, formatted as `BASE-QUOTE` (e.g., `USD-NGN`). |
+| `currency` | query | Either this or `currencyPair` | A single currency code to retrieve all available rates for that currency (e.g., `USD` returns rates for USD-NGN, USD-GHS, USD-KES, etc.). |
+
+## When to use Rates
+
+- **Display live rates** — Show your users the current exchange rate on your dashboard, app, or checkout page.
+- **Monitor the market** — Track rate movements to decide the optimal time to generate a quote and convert.
+- **Estimate costs** — Calculate approximate conversion amounts before committing to a quote.
+
+## Key things to know
+
+- **Indicative only** — Rates are not guaranteed. The actual rate you get is determined when you generate a [quote](/conversion/quotes).
+- **Real-time** — Rates update continuously and reflect current market conditions.
+- **No commitment** — Fetching a rate does not create any obligation to convert.
+- **Buy vs sell** — The response includes both sides. The `buy` price is what Fincra buys the base currency at; the `sell` price is what Fincra sells it at.
+
+For the full implementation guide with code examples, see [Create a Conversion](/conversion/create-a-conversion).
