--- a/conversion/supported-currency-pairs.mdx
+++ b/conversion/supported-currency-pairs.mdx
@@ -21,8 +21,8 @@ Fincra supports currency conversion across a range of African and international 
 | 🇬🇧 **GBP** — British Pound      | NGN, USD, EUR, GHS, KES, UGX, ZAR, ZMW, XAF, XOF, TZS |
 | 🇬🇭 **GHS** — Ghanaian Cedi      | NGN, USD, EUR, GBP, KES, UGX, ZAR, ZMW, XAF, XOF, TZS |
 | 🇰🇪 **KES** — Kenyan Shilling    | NGN, USD, EUR, GBP, GHS, UGX, ZAR, ZMW, XAF, XOF, TZS |
-| 🇨🇲 **XAF** — CFA Franc (CEMAC)  | NGN, USD, EUR, GBP, KES, GHS, XOF, ZAR, ZMW, TZS, UGX |
-| 🇸🇳 **XOF** — CFA Franc (UEMOA)  | NGN, USD, EUR, GBP, KES, GHS, XAF, ZAR, ZMW, TZS, UGX |
+| 🇨🇲 **XAF** — CFA Franc  | NGN, USD, EUR, GBP, KES, GHS, XOF, ZAR, ZMW, TZS, UGX |
+| 🇸🇳 **XOF** — CFA Franc  | NGN, USD, EUR, GBP, KES, GHS, XAF, ZAR, ZMW, TZS, UGX |
 | 🇿🇦 **ZAR** — South African Rand | NGN, USD, EUR, GBP, KES, GHS, XAF, XOF, ZMW, TZS, UGX |
 | 🇹🇿 **TZS** — Tanzanian Shilling | NGN, USD, EUR, GBP, GHS, KES, UGX, ZAR, ZMW, XAF, XOF |
 | 🇺🇬 **UGX** — Ugandan Shilling   | NGN, USD, EUR, GBP, GHS, KES, ZAR, ZMW, XAF, XOF, TZS |
@@ -32,7 +32,7 @@ Fincra supports currency conversion across a range of African and international 
 ## Option B: Accordion per currency
 
 <AccordionGroup>
-  <Accordion title="🇳🇬 NGN — Nigerian Naira" icon="naira-sign">
+  <Accordion title="🇳🇬 NGN — Nigerian Naira">
     **11 destination currencies available**
 
     | Destination | Currency |
@@ -42,15 +42,15 @@ Fincra supports currency conversion across a range of African and international 
     | 🇬🇧 GBP | British Pound |
     | 🇰🇪 KES | Kenyan Shilling |
     | 🇬🇭 GHS | Ghanaian Cedi |
-    | 🇨🇲 XAF | CFA Franc (CEMAC) |
-    | 🇸🇳 XOF | CFA Franc (UEMOA) |
+    | 🇨🇲 XAF | CFA Franc |
+    | 🇸🇳 XOF | CFA Franc |
     | 🇿🇦 ZAR | South African Rand |
     | 🇿🇲 ZMW | Zambian Kwacha |
     | 🇹🇿 TZS | Tanzanian Shilling |
     | 🇺🇬 UGX | Ugandan Shilling |
 
   </Accordion>
-  <Accordion title="🇺🇸 USD — US Dollar" icon="dollar-sign">
+  <Accordion title="🇺🇸 USD — US Dollar">
     **11 destination currencies available**
 
     | Destination | Currency |
@@ -63,12 +63,12 @@ Fincra supports currency conversion across a range of African and international 
     | 🇺🇬 UGX | Ugandan Shilling |
     | 🇿🇦 ZAR | South African Rand |
     | 🇿🇲 ZMW | Zambian Kwacha |
-    | 🇨🇲 XAF | CFA Franc (CEMAC) |
-    | 🇸🇳 XOF | CFA Franc (UEMOA) |
+    | 🇨🇲 XAF | CFA Franc |
+    | 🇸🇳 XOF | CFA Franc |
     | 🇹🇿 TZS | Tanzanian Shilling |
 
   </Accordion>
-  <Accordion title="🇪🇺 EUR — Euro" icon="euro-sign">
+  <Accordion title="🇪🇺 EUR — Euro">
     **11 destination currencies available**
 
     | Destination | Currency |
@@ -81,12 +81,12 @@ Fincra supports currency conversion across a range of African and international 
     | 🇺🇬 UGX | Ugandan Shilling |
     | 🇿🇦 ZAR | South African Rand |
     | 🇿🇲 ZMW | Zambian Kwacha |
-    | 🇨🇲 XAF | CFA Franc (CEMAC) |
-    | 🇸🇳 XOF | CFA Franc (UEMOA) |
+    | 🇨🇲 XAF | CFA Franc |
+    | 🇸🇳 XOF | CFA Franc |
     | 🇹🇿 TZS | Tanzanian Shilling |
 
   </Accordion>
-  <Accordion title="🇬🇧 GBP — British Pound" icon="sterling-sign">
+  <Accordion title="🇬🇧 GBP — British Pound">
     **11 destination currencies available**
 
     | Destination | Currency |
@@ -99,12 +99,12 @@ Fincra supports currency conversion across a range of African and international 
     | 🇺🇬 UGX | Ugandan Shilling |
     | 🇿🇦 ZAR | South African Rand |
     | 🇿🇲 ZMW | Zambian Kwacha |
-    | 🇨🇲 XAF | CFA Franc (CEMAC) |
-    | 🇸🇳 XOF | CFA Franc (UEMOA) |
+    | 🇨🇲 XAF | CFA Franc |
+    | 🇸🇳 XOF | CFA Franc |
     | 🇹🇿 TZS | Tanzanian Shilling |
 
   </Accordion>
-  <Accordion title="🇬🇭 GHS — Ghanaian Cedi" icon="money-bill">
+  <Accordion title="🇬🇭 GHS — Ghanaian Cedi">
     **11 destination currencies available**
 
     | Destination | Currency |
@@ -117,12 +117,12 @@ Fincra supports currency conversion across a range of African and international 
     | 🇺🇬 UGX | Ugandan Shilling |
     | 🇿🇦 ZAR | South African Rand |
     | 🇿🇲 ZMW | Zambian Kwacha |
-    | 🇨🇲 XAF | CFA Franc (CEMAC) |
-    | 🇸🇳 XOF | CFA Franc (UEMOA) |
+    | 🇨🇲 XAF | CFA Franc |
+    | 🇸🇳 XOF | CFA Franc |
     | 🇹🇿 TZS | Tanzanian Shilling |
 
   </Accordion>
-  <Accordion title="🇰🇪 KES — Kenyan Shilling" icon="money-bill">
+  <Accordion title="🇰🇪 KES — Kenyan Shilling">
     **11 destination currencies available**
 
     | Destination | Currency |
@@ -135,12 +135,12 @@ Fincra supports currency conversion across a range of African and international 
     | 🇺🇬 UGX | Ugandan Shilling |
     | 🇿🇦 ZAR | South African Rand |
     | 🇿🇲 ZMW | Zambian Kwacha |
-    | 🇨🇲 XAF | CFA Franc (CEMAC) |
-    | 🇸🇳 XOF | CFA Franc (UEMOA) |
+    | 🇨🇲 XAF | CFA Franc |
+    | 🇸🇳 XOF | CFA Franc |
     | 🇹🇿 TZS | Tanzanian Shilling |
 
   </Accordion>
-  <Accordion title="🇨🇲 XAF — CFA Franc (CEMAC)" icon="money-bill">
+  <Accordion title="🇨🇲 XAF — CFA Franc">
     **11 destination currencies available**
 
     | Destination | Currency |
@@ -151,14 +151,14 @@ Fincra supports currency conversion across a range of African and international 
     | 🇬🇧 GBP | British Pound |
     | 🇰🇪 KES | Kenyan Shilling |
     | 🇬🇭 GHS | Ghanaian Cedi |
-    | 🇸🇳 XOF | CFA Franc (UEMOA) |
+    | 🇸🇳 XOF | CFA Franc |
     | 🇿🇦 ZAR | South African Rand |
     | 🇿🇲 ZMW | Zambian Kwacha |
     | 🇹🇿 TZS | Tanzanian Shilling |
     | 🇺🇬 UGX | Ugandan Shilling |
 
   </Accordion>
-  <Accordion title="🇸🇳 XOF — CFA Franc (UEMOA)" icon="money-bill">
+  <Accordion title="🇸🇳 XOF — CFA Franc">
     **11 destination currencies available**
 
     | Destination | Currency |
@@ -169,14 +169,14 @@ Fincra supports currency conversion across a range of African and international 
     | 🇬🇧 GBP | British Pound |
     | 🇰🇪 KES | Kenyan Shilling |
     | 🇬🇭 GHS | Ghanaian Cedi |
-    | 🇨🇲 XAF | CFA Franc (CEMAC) |
+    | 🇨🇲 XAF | CFA Franc |
     | 🇿🇦 ZAR | South African Rand |
     | 🇿🇲 ZMW | Zambian Kwacha |
     | 🇹🇿 TZS | Tanzanian Shilling |
     | 🇺🇬 UGX | Ugandan Shilling |
 
   </Accordion>
-  <Accordion title="🇿🇦 ZAR — South African Rand" icon="money-bill">
+  <Accordion title="🇿🇦 ZAR — South African Rand">
     **11 destination currencies available**
 
     | Destination | Currency |
@@ -187,32 +187,14 @@ Fincra supports currency conversion across a range of African and international 
     | 🇬🇧 GBP | British Pound |
     | 🇰🇪 KES | Kenyan Shilling |
     | 🇬🇭 GHS | Ghanaian Cedi |
-    | 🇨🇲 XAF | CFA Franc (CEMAC) |
-    | 🇸🇳 XOF | CFA Franc (UEMOA) |
+    | 🇨🇲 XAF | CFA Franc |
+    | 🇸🇳 XOF | CFA Franc |
     | 🇿🇲 ZMW | Zambian Kwacha |
     | 🇹🇿 TZS | Tanzanian Shilling |
     | 🇺🇬 UGX | Ugandan Shilling |
 
   </Accordion>
-  <Accordion title="🇹🇿 TZS — Tanzanian Shilling" icon="money-bill">
-    **11 destination currencies available**
-
-    | Destination | Currency |
-    |---|---|
-    | 🇳🇬 NGN | Nigerian Naira |
-    | 🇺🇸 USD | US Dollar |
-    | 🇪🇺 EUR | Euro |
-    | 🇬🇧 GBP | British Pound |
-    | 🇬🇭 GHS | Ghanaian Cedi |
-    | 🇰🇪 KES | Kenyan Shilling |
-    | 🇺🇬 UGX | Ugandan Shilling |
-    | 🇿🇦 ZAR | South African Rand |
-    | 🇿🇲 ZMW | Zambian Kwacha |
-    | 🇨🇲 XAF | CFA Franc (CEMAC) |
-    | 🇸🇳 XOF | CFA Franc (UEMOA) |
-
-  </Accordion>
-  <Accordion title="🇿🇲 ZMW — Zambian Kwacha" icon="money-bill">
+  <Accordion title="🇹🇿 TZS — Tanzanian Shilling">
     **11 destination currencies available**
 
     | Destination | Currency |
@@ -225,12 +207,30 @@ Fincra supports currency conversion across a range of African and international 
     | 🇰🇪 KES | Kenyan Shilling |
     | 🇺🇬 UGX | Ugandan Shilling |
     | 🇿🇦 ZAR | South African Rand |
-    | 🇨🇲 XAF | CFA Franc (CEMAC) |
-    | 🇸🇳 XOF | CFA Franc (UEMOA) |
+    | 🇿🇲 ZMW | Zambian Kwacha |
+    | 🇨🇲 XAF | CFA Franc |
+    | 🇸🇳 XOF | CFA Franc |
+
+  </Accordion>
+  <Accordion title="🇿🇲 ZMW — Zambian Kwacha">
+    **11 destination currencies available**
+
+    | Destination | Currency |
+    |---|---|
+    | 🇳🇬 NGN | Nigerian Naira |
+    | 🇺🇸 USD | US Dollar |
+    | 🇪🇺 EUR | Euro |
+    | 🇬🇧 GBP | British Pound |
+    | 🇬🇭 GHS | Ghanaian Cedi |
+    | 🇰🇪 KES | Kenyan Shilling |
+    | 🇺🇬 UGX | Ugandan Shilling |
+    | 🇿🇦 ZAR | South African Rand |
+    | 🇨🇲 XAF | CFA Franc |
+    | 🇸🇳 XOF | CFA Franc |
     | 🇹🇿 TZS | Tanzanian Shilling |
 
   </Accordion>
-  <Accordion title="🇺🇬 UGX — Ugandan Shilling" icon="money-bill">
+  <Accordion title="🇺🇬 UGX — Ugandan Shilling">
     **11 destination currencies available**
 
     | Destination | Currency |
@@ -243,12 +243,12 @@ Fincra supports currency conversion across a range of African and international 
     | 🇰🇪 KES | Kenyan Shilling |
     | 🇿🇦 ZAR | South African Rand |
     | 🇿🇲 ZMW | Zambian Kwacha |
-    | 🇨🇲 XAF | CFA Franc (CEMAC) |
-    | 🇸🇳 XOF | CFA Franc (UEMOA) |
+    | 🇨🇲 XAF | CFA Franc |
+    | 🇸🇳 XOF | CFA Franc |
     | 🇹🇿 TZS | Tanzanian Shilling |
 
   </Accordion>
-  <Accordion title="🇨🇦 CAD — Canadian Dollar" icon="dollar-sign">
+  <Accordion title="🇨🇦 CAD — Canadian Dollar">
     **1 destination currency available**
 
     | Destination | Currency |
@@ -264,6 +264,6 @@ Fincra supports currency conversion across a range of African and international 
 
 - **Real-time rates** — Exchange rates update continuously. Use the [Rates](/conversion/rates) endpoint to check the current rate for any supported pair.
 - **No conversion fees** — There are no separate fees for converting between currencies. The exchange rate you see in your quote is the all-in rate.
-- **Quote validity** — Once you generate a quote, the rate is locked for **30 seconds** (extendable to 1 minute by request).
+- **Quote validity** — Once you generate a quote, the rate is locked for **30 seconds**.
 - **CAD is one-way only** — You can convert CAD to USD, but no other source currency can convert to CAD.
 - **Not all payment currencies are convertible** — Fincra supports 17 currencies for payments, but not all are available for direct conversion. See [Supported Currencies](/payments/currencies) for the full list of payment currencies.
